# KiCadPartsSyncer

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  start-syncer.bat  start-syncer.vbs
src/KiCadPartsSyncer/: settings.json
src/KiCadPartsSyncer/app/: hotkeys.py  main.py  orchestrator.py
src/KiCadPartsSyncer/domain/: events.py
src/KiCadPartsSyncer/infrastructure/git/: remote_checker.py  repo_puller.py  repo_pusher.py  repo_status_poller.py
src/KiCadPartsSyncer/infrastructure/ipc/: endpoint_detector.py
src/KiCadPartsSyncer/infrastructure/system/: config.py  credentials.py  event_hub.py  logger.py  settings_opener.py  win_clickthrough.py  win_hotkey.py
src/KiCadPartsSyncer/ui/: overlay.py  tray.py
tools/diagnostics/: 01_hud_smoke.py  02_tray_smoke.py  02b_tray_probe_v2.py  03_overlay_instrument.py  04_overlay_show_probe.py  05_tray_init_probe.py  05_tray_init_probe_v2.py  06_monkeypatch_overlay.py  06b_fix_cursor_and_show.py  07_event_tap_and_autoshow.py  07_event_tap_and_autoshow_v2.py  07_event_tap_and_autoshow_v3.py  08_gui_invoker_autoshow.py  09_overlay_size_check.py  09b_overlay_introspect.py  10_overlay_event_timeline.py
