[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kicad-companion"
version = "0.1.0"
description = "KiCad Companion App (Windows-first)"
requires-python = ">=3.10"
dependencies = [
    "PySide6==6.7.2",
    "watchdog==4.0.1",
    "pyyaml==6.0.2",
    "keyring==25.3.0",
    "psutil==6.0.0",
    "plyer==2.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
